fixed memory leak issue

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,3 +1,5 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
+$body-font-family: 'Work Sans', sans-serif;
+$shadow-key-umbra-opacity: rgba(#1affdd, 0.1) !default;
+$shadow-key-penumbra-opacity: rgba(#1affdd, 0.1) !default;
+$shadow-key-ambient-opacity: rgba(#1affdd, 0.1) !default;
+
